# ChangeLog for dev-go/go-oauth2
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-go/go-oauth2/ChangeLog,v 1.10 2015/07/08 19:42:07 williamh Exp $

  08 Jul 2015; William Hubbs <williamh@gentoo.org> go-oauth2-9999.ebuild:
  Add slot dependency for go-net

  06 Jul 2015; William Hubbs <williamh@gentoo.org> go-oauth2-9999.ebuild:
  Add a subslot of the version number so we know which version is installed

*go-oauth2-0_pre20150527 (01 Jul 2015)

  01 Jul 2015; William Hubbs <williamh@gentoo.org>
  +go-oauth2-0_pre20150527.ebuild, -go-oauth2-1.4.2_p20150511.ebuild,
  -go-oauth2-1.4.2_p20150527.ebuild:
  move the latest snapshot to a prerelease of version 0

  29 Jun 2015; William Hubbs <williamh@gentoo.org>
  go-oauth2-1.4.2_p20150527.ebuild, go-oauth2-9999.ebuild:
  add ego_src setting to the live ebuild

  29 Jun 2015; William Hubbs <williamh@gentoo.org>
  go-oauth2-1.4.2_p20150527.ebuild, go-oauth2-9999.ebuild:
  Make live ebuild copyable

  29 Jun 2015; William Hubbs <williamh@gentoo.org> go-oauth2-9999.ebuild:
  drop keywords from live ebuild

*go-oauth2-9999 (25 Jun 2015)

  25 Jun 2015; William Hubbs <williamh@gentoo.org> +go-oauth2-9999.ebuild:
  Add live ebuild that uses the go eclasses

*go-oauth2-1.4.2_p20150527 (09 Jun 2015)

  09 Jun 2015; Zac Medico <zmedico@gentoo.org>
  +go-oauth2-1.4.2_p20150527.ebuild:
  Add 1.4.2_p20150527 snapshot with timestamp preservation for bug 551486.

  07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add github to remote-id in metadata.xml

*go-oauth2-1.4.2_p20150511 (25 May 2015)

  25 May 2015; Zac Medico <zmedico@gentoo.org>
  +go-oauth2-1.4.2_p20150511.ebuild, +metadata.xml:
  Add go-oauth2.