@@ -1,6 +1,12 @@
 # ChangeLog for sys-cluster/torque
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/torque/ChangeLog,v 1.185 2015/04/30 18:07:29 jsbronder Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/torque/ChangeLog,v 1.186 2015/08/05 17:23:36 jsbronder Exp $
+
+*torque-4.2.9-r4 (05 Aug 2015)
+
+  05 Aug 2015; Justin Bronder <jsbronder@gentoo.org> +torque-4.2.9-r4.ebuild:
+  Drop pkg_config() as handling the multiple authentication mechanisms is no
+  longer feasible from within the ebuild (#517124)
 
 *torque-4.2.9-r3 (30 Apr 2015)
 
